<resources>
    <string name="app_name">Mendaur</string>
    <string name="logo_app">Mendaur app logo</string>
    <string name="tv_selamat_datang">Welcome</string>
    <string name="tv_jargon_mendaur">Protect the Environment, Care for the Future: Start from Waste Management</string>
    <string name="tv_masuk">Log in with Social Networks</string>
    <string name="login_google">Sign in with Google</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="desc_float_btn_scan">Button to open the image scan page</string>
    <string name="desc_image_sampah">Image of the trash you want to detect</string>
    <string name="btn_camerax">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_scan">Scan</string>
    <string name="no_permission">Not Obtaining Permission</string>
    <string name="title_scan_sampah">Waste Scan</string>
    <string name="picture" translatable="false">picture</string>
    <string name="is_back_camera" translatable="false">isBackCamera</string>
    <string name="intent_type" translatable="false">image/*</string>
    <string name="choose_image" translatable="false">Pilih Gambar</string>
    <string name="extra_is_back_camera" translatable="false">isBackCamera</string>
    <string name="extra_picture" translatable="false">picture</string>
    <string name="failed_take_a_picture">Failed to take a picture.</string>
    <string name="failed_bring_up_camera">Failed to bring up the camera.</string>
    <string name="desc_capture">Button to take a picture</string>
    <string name="desc_switch_camera">Button to change the camera position</string>
    <string name="tv_selamat_nama" translatable="false">%1$s, %2$s</string>
    <string name="tv_yuk_daur_ulang">Let\'s recycle your trash!</string>
    <string name="tv_yuk_baca_artikel">Let\'s read the article!</string>
    <string name="desc_iv_profile">Profile picture</string>
    <string name="tv_email">Emailpengguna@gmail.com</string>
    <string name="tv_username">Nama Pengguna</string>
    <string name="btn_sign_out">Log out</string>
    <string name="btn_language">Language Settings</string>
    <string name="btn_help">Help Center</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_log_out">Are you sure you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tv_jenis_sampah">Type of Garbage</string>
    <string name="tv_tipe_sampah">Garbage type</string>
    <string name="btn_tempat">Nearby Collectors</string>
    <string name="tv_atau">or</string>
    <string name="btn_cara_mendaur_ulang">How to Recycle</string>
    <string name="tv_apakah_anda_ingin">Do you want to?</string>
    <string name="title_hasil_scan">Garbage Scan Result</string>
    <string name="tv_waktu_post">29 Mei 2023</string>
    <string name="tv_nama_user">User Name</string>
    <string name="desc_iv_artikel">Article image</string>
    <string name="desc_iv_daur_ulang">Recycling picture</string>
    <string name="description">Lorem ipsum dolor sit amet consectetur. Morbi neque vitae hac vulputate orci enim pellentesque. Sit nunc consectetur ultricies elit. Viverra aliquet duis neque est tincidunt nec tellus.</string>
    <string name="tv_judul_artikel">Article Title</string>
    <string name="iv_icon_time">Time icon image</string>
    <string name="desc_float_btn_add">Button to open the article posting page</string>
    <string name="email_mendaur">MendaurId@gmail.com</string>
    <string name="email_subject">Title of difficulty</string>
    <string name="email_body">Dear MendaurId team,\n\nI would like to report something. Please find the details below:\n\n- Description of difficulty:\n\n \n Thank you.</string>
    <string name="send_email">Send Email</string>
    <string name="contact_mendaur_team">Would you like to contact the Mendaur Team?</string>
    <string name="no_gmail_app">Sorry… Gmail App Not Found</string>
    <string name="API_KEY">[YOUR API KEY]</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="title_tempat_pengepul_terdekat">Nearby Collectors</string>
    <string name="tv_kirim_sampah">Let\'s send your recyclables to the nearest Waste Bank!</string>
    <string name="tv_masukan_foto">Input the trash image you want to scan</string>
    <string name="selamat_pagi">Good Morning</string>
    <string name="selamat_siang">Good Afternoon</string>
    <string name="selamat_malam">Good Evening</string>
    <string name="tv_judul_daur_ulang">Recycling Title</string>
    <string name="desc_iv_icon_right">right icon image</string>
    <string name="tv_alat_dan_bahan">Tools and Materials:</string>
    <string name="tv_cara_membuat">How to make:</string>
    <string name="et_isi_artikel">Insert article content here</string>
    <string name="et_deskripsi_report">Enter the report description here..</string>
    <string name="et_judul_artikel">Enter the title here..</string>
    <string name="selamat_sore">Good Afternoon</string>
    <string name="rating">Rating: </string>
    <string name="tv_akurasi">Accuracy: %s</string>
    <string name="btn_send">send</string>
    <string name="bank_sampah">Waste Bank</string>
    <string name="bank_sampah_tidak_ditemukan">Waste bank not found</string>
    <string name="terjadi_kesalahan">Error occurred</string>
    <string name="tv_isi_artikel">Article Content</string>
    <string name="title_detail_daur_ulang">Details of How to Recycle</string>
    <string name="title_daur_ulang">List of Recycling Methods</string>
    <string name="empty_file">Empty or not found files</string>
    <string name="media_type" translatable="false">image/jpeg</string>
    <string name="photo" translatable="false">photo</string>
    <string name="tv_daftar_daur_not_found">Recycling list not found</string>
    <string name="tv_lihat_semua">See all</string>
    <string name="tv_artikel_tidak_ditemukan">List of articles not found</string>
    <string name="title_detail_artikel">Article Details</string>
    <string name="tvf_isi_artikel">Article Content: </string>
    <string name="title_daftar_artikel">List of Articles</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="empty_content">Article content must not be empty</string>
    <string name="title_post_artikel">Post Artikel</string>
    <string name="tv_yuk_lihat">Let\'s see how to recycle your trash!</string>
    <string name="tv_jenis">jenis</string>
    <string name="memuat">Loading</string>
    <string name="mohon_menunggu">Please wait…</string>
    <string name="scan_berhasil">Scan successful</string>
    <string name="scan_tidak_berhasil">Scan was not successful, please try again</string>
    <string name="gagal_login">Failed to login</string>
    <string name="berhasil_login">Successful login</string>
    <string name="post_tidak_berhasil">Post did not work, please try again</string>
    <string name="error_timeout">Error: Timeout</string>
    <string name="tv_pastikan">Ensure that the photos you submit are of clear enough quality and avoid photos that are blurry, cropped, or too dark so that it is difficult to clearly identify the waste.</string>
    <string name="desc_iv_banner">Draw a banner inviting you to bring your recyclables to the nearest waste bank.</string>
    <string name="tv_report">Report Type</string>
    <string name="et_jenis_report">Select the report type</string>
    <string name="tv_deskripsi_report">Report description</string>
    <string name="report">Report</string>
    <string name="title_report">Report</string>
    <string name="btn_about">About</string>
    <string name="tv_nama_anggota">Members of Mendaur.id</string>
    <string name="tv_id_anggota">a304dsx1096</string>
    <string name="title_about">About Mendaur Team</string>
    <string name="tv_mendaur_team">Mendaur Team</string>
    <string name="empty_title_report">The contents of the report type cannot be empty</string>
    <string name="empty_content_report">Report description cannot be empty</string>
    <string name="post_report_tidak_berhasil">Post did not work, please try again</string>
    <string name="menu_title_blank"> </string>
</resources>