<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.scan.ScanActivity">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_image_sampah"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camerax"
            style="@style/WhiteButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:letterSpacing="0"
            android:text="@string/btn_camerax"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/btn_scan"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            style="@style/WhiteButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:letterSpacing="0"
            android:text="@string/btn_gallery"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_scan"
            app:layout_constraintTop_toTopOf="@+id/btn_camerax" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scan"
            style="@style/GreenButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:letterSpacing="0"
            android:text="@string/btn_scan"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_camerax" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>