<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailartikel.DetailArtikelActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/desc_iv_profile"
                android:scaleType="centerCrop"
                app:civ_border_color="@color/green"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_nama_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_extrabold"
                android:maxLines="1"
                android:text="@string/tv_nama_user"
                android:textColor="@color/green"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/iv_profile"
                app:layout_constraintTop_toTopOf="@+id/iv_profile" />

            <TextView
                android:id="@+id/tv_waktu_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_waktu_post"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintStart_toEndOf="@+id/iv_profile" />

            <ImageView
                android:id="@+id/iv_artikel"
                android:layout_width="350dp"
                android:layout_height="240dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/desc_iv_artikel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_waktu_post"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/iv_artikel"
                app:layout_constraintStart_toStartOf="@+id/iv_artikel"
                app:layout_constraintTop_toBottomOf="@+id/iv_artikel"
                tools:text="@string/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>