<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="12dp"
    android:layout_marginBottom="16dp"
    card_view:cardElevation="4dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_daur_ulang"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_iv_daur_ulang"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_judul_daur_ulang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_extrabold"
            android:maxLines="2"
            android:textAlignment="center"
            android:textColor="@color/greenDark"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_daur_ulang"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_icon_right"
            card_view:layout_constraintStart_toEndOf="@+id/iv_daur_ulang"
            card_view:layout_constraintTop_toTopOf="@+id/iv_daur_ulang"
            tools:text="@string/tv_judul_daur_ulang" />

        <ImageView
            android:id="@+id/iv_icon_right"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/desc_iv_icon_right"
            android:src="@drawable/ic_right"
            card_view:layout_constraintBottom_toBottomOf="@+id/tv_judul_daur_ulang"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/tv_judul_daur_ulang" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>